Handle get and upload images
- Handle get item images
- Handle upload avatar
- Handle get avatar